--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.4'
     implementation platform('com.google.firebase:firebase-bom:30.0.2')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.karumi:dexter:6.2.3'
+
 }
